TestSuite/errors/err0087.pas
type TClass = class
procedure Test; abstract;
end;

var t : TClass;

begin
t := new TClass;
end.